templates/iptables/iptablesconf.conf
# Generated by iptables-save v1.8.7 on Tue Aug 24 16:41:06 2021
*mangle
:PREROUTING ACCEPT [5801:1482589]
:INPUT ACCEPT [2633:478260]
:FORWARD ACCEPT [3148:998913]
:OUTPUT ACCEPT [2338:8621612]
:POSTROUTING ACCEPT [5488:9621008]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
# Completed on Tue Aug 24 16:41:06 2021
# Generated by iptables-save v1.8.7 on Mon Jan 31 17:09:56 2022
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORTESTSERVER - [0:0]
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --rcheck --seconds 1 --hitcount 2 --name ICMPALL --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --set --name ICMPALL --mask 255.255.255.255 --rsource
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT

-A INPUT -i lo -j ACCEPT

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i judgeapi -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 22,53 -j ACCEPT
-A INPUT -p udp -m udp -m multiport --dports 3000,4789,7654,7666,7777,53 -j ACCEPT

-A INPUT -i allservice -s 10.31.31.2 -p tcp -m tcp -m multiport --dports 80 -j ACCEPT

-A FORWARD -i server -o judgeapi -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i server -o judgeapi -j DROP

-A FORWARD -i server -o lan -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i server -o lan -j DROP

-A FORWARD -i server -o testserver -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i server -o testserver -j DROP


#-A FORWARD -i finallan -o wan -d 8.8.8.8 -p icmp -j ACCEPT
#-A FORWARD -i finallan -o wan -m state --state ESTABLISHED,RELATED -j ACCEPT
#-A FORWARD -i finallan -o wan -j DROP

-A FORWARD -i finallan -o judgeapi -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i finallan -o judgeapi -j DROP

-A FORWARD -i finallan -o lan -p udp -m udp -m multiport --dports 4789 -j ACCEPT
-A FORWARD -i finallan -o lan -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i finallan -o lan -j DROP

-A FORWARD -i finallan -o testserver -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i finallan -o testserver -j DROP

-A FORWARD -i testserver -j FORTESTSERVER
COMMIT
# Completed on Mon Jan 31 17:09:56 2022
# Generated by iptables-save v1.8.7 on Mon Jan 31 17:09:56 2022
*nat
:PREROUTING ACCEPT [1:202]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.123.0/24 -o wan -j MASQUERADE
-A POSTROUTING -s 10.100.100.0/24 -o wan -j MASQUERADE
-A POSTROUTING -s 10.100.100.0/24 -o totfn -j MASQUERADE
-A POSTROUTING -s 10.100.125.0/24 -o wan -j MASQUERADE
-A POSTROUTING -s 10.31.31.0/24 -o wan -j MASQUERADE
-A POSTROUTING -s 192.168.254.0/24 -o wan -j MASQUERADE
COMMIT
# Completed on Mon Jan 31 17:09:56 2022
